--- a/KNN2.ipynb
+++ b/KNN2.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "KNN2.ipynb",
-      "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPu4nSHMW68rIzSleruW+/O",
+      "provenance": [],
+      "authorship_tag": "ABX9TyN0f7f38JQtmAZhrJycfQNb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,9 +28,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nDR_Rsspa3B6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "nDR_Rsspa3B6"
       },
       "source": [
         "import numpy as np\n",
@@ -42,14 +40,13 @@
         "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
         "from sklearn.datasets import load_iris "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "um1-Bxljhc-V",
-        "colab_type": "text"
+        "id": "um1-Bxljhc-V"
       },
       "source": [
         "Get the data"
@@ -58,36 +55,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j4W01aidbCDr",
-        "colab_type": "code",
-        "colab": {}
+        "id": "j4W01aidbCDr"
       },
       "source": [
         "path = \"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\"\n",
         "headernames = ['sepal-length', 'sepal-width', 'petal-length', 'petal-width', 'Class']"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ie9BvcckbEdL",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ie9BvcckbEdL"
       },
       "source": [
         "dataset = pd.read_csv(path, names = headernames)\n",
         "dataset.head()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yEfNix1IhfQV",
-        "colab_type": "text"
+        "id": "yEfNix1IhfQV"
       },
       "source": [
         "Split the labels from the features"
@@ -96,23 +88,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TZQityZ4bI_k",
-        "colab_type": "code",
-        "colab": {}
+        "id": "TZQityZ4bI_k"
       },
       "source": [
         "X = dataset.iloc[:, :-1].values\n",
         "y = dataset.iloc[:, 4].values"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "km0BjpljePw6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "km0BjpljePw6"
       },
       "source": [
         "plt.figure(figsize=(10,3))\n",
@@ -122,15 +110,13 @@
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "x4TB44Mde_bZ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "x4TB44Mde_bZ"
       },
       "source": [
         "plt.figure(figsize=(10,3))\n",
@@ -139,40 +125,35 @@
         "plt.xlabel(\"sepal-length\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2g2KzJIhbwsY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "2g2KzJIhbwsY"
       },
       "source": [
         "X"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2IX5kLILby6b",
-        "colab_type": "code",
-        "colab": {}
+        "id": "2IX5kLILby6b"
       },
       "source": [
         "y"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WBSdde7Khkwf",
-        "colab_type": "text"
+        "id": "WBSdde7Khkwf"
       },
       "source": [
         "Split the data into train and test sets"
@@ -181,22 +162,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lTZTxjhrbM28",
-        "colab_type": "code",
-        "colab": {}
+        "id": "lTZTxjhrbM28"
       },
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NN2UziPjf4Ak",
-        "colab_type": "code",
-        "colab": {}
+        "id": "NN2UziPjf4Ak"
       },
       "source": [
         "plt.figure(figsize=(10,3))\n",
@@ -206,15 +183,13 @@
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nYTIo_oCXzee",
-        "colab_type": "code",
-        "colab": {}
+        "id": "nYTIo_oCXzee"
       },
       "source": [
         "plt.figure(figsize=(10,3))\n",
@@ -223,15 +198,13 @@
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ag30elGkgCkU",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ag30elGkgCkU"
       },
       "source": [
         "plt.figure(figsize=(10,3))\n",
@@ -241,15 +214,13 @@
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xnBWYXAYfrPG",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xnBWYXAYfrPG"
       },
       "source": [
         "plt.figure(figsize=(10,3))\n",
@@ -258,14 +229,13 @@
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8f4HQQcMYs1g",
-        "colab_type": "text"
+        "id": "8f4HQQcMYs1g"
       },
       "source": [
         "Standarize the dataset<br>\n",
@@ -275,9 +245,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Cj81xvBqbTEp",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Cj81xvBqbTEp"
       },
       "source": [
         "scaler = StandardScaler()\n",
@@ -286,27 +254,24 @@
         "X_train = scaler.transform(X_train)\n",
         "X_test = scaler.transform(X_test)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FNT8eLLIb8TK",
-        "colab_type": "code",
-        "colab": {}
+        "id": "FNT8eLLIb8TK"
       },
       "source": [
         "X_test"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-BacUtgUZj23",
-        "colab_type": "text"
+        "id": "-BacUtgUZj23"
       },
       "source": [
         "Create and train the model<br>\n",
@@ -317,22 +282,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kppRidjfbVsM",
-        "colab_type": "code",
-        "colab": {}
+        "id": "kppRidjfbVsM"
       },
       "source": [
         "classifier = KNeighborsClassifier(n_neighbors = 8)\n",
         "classifier.fit(X_train, y_train)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-DYIlkHfh13m",
-        "colab_type": "text"
+        "id": "-DYIlkHfh13m"
       },
       "source": [
         "Make predictions"
@@ -341,21 +303,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C7PGuRp5bXzI",
-        "colab_type": "code",
-        "colab": {}
+        "id": "C7PGuRp5bXzI"
       },
       "source": [
         "y_pred = classifier.predict(X_test)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ouBq-newh8Ww",
-        "colab_type": "text"
+        "id": "ouBq-newh8Ww"
       },
       "source": [
         "Calculate the confusion matrix"
@@ -364,8 +323,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wTyP957QijOW",
-        "colab_type": "text"
+        "id": "wTyP957QijOW"
       },
       "source": [
         "TP - FP<br>\n",
@@ -375,23 +333,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c7lQSrTpWpHR",
-        "colab_type": "code",
-        "colab": {}
+        "id": "c7lQSrTpWpHR"
       },
       "source": [
         "result = confusion_matrix(y_test, y_pred)\n",
         "print(\"Confusion Matrix:\")\n",
         "print(result)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LxMlfD2xicah",
-        "colab_type": "text"
+        "id": "LxMlfD2xicah"
       },
       "source": [
         "Precision = TP/(TP + FP)<br>\n",
@@ -407,31 +362,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3fpZCI0MbaS0",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3fpZCI0MbaS0"
       },
       "source": [
         "result1 = classification_report(y_test, y_pred)\n",
         "print(\"Classification Report:\",)\n",
         "print (result1)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QzJeXealWxdp",
-        "colab_type": "code",
-        "colab": {}
+        "id": "QzJeXealWxdp"
       },
       "source": [
         "result2 = accuracy_score(y_test,y_pred)\n",
         "print(\"Accuracy:\",result2)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AqVE-_TtF8Hl"
+      },
+      "source": [
+        "**Assignment**<br>\n",
+        "1. Change the number of neighbors used from 8 to a smaller number and then by a larger number<br>\n",
+        "2. Then change the weights from uniform to distance"
+      ]
     }
   ]
 }
