--- a/KNN3.ipynb
+++ b/KNN3.ipynb
@@ -39,7 +39,7 @@
         "from random import randint\n",
         "from sklearn.neighbors import KNeighborsClassifier"
       ],
-      "execution_count": null,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -57,9 +57,9 @@
         "id": "cGk8veVpAWxL"
       },
       "source": [
-        "n_neighbors = 2 #change to 5"
+        "n_neighbors = 5 #change "
       ],
-      "execution_count": null,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -79,25 +79,42 @@
       "source": [
         "from sklearn.datasets import make_classification\n",
         "# Generate Balanced Data\n",
-        "X,y = make_classification(n_samples=2000, n_features=2, n_informative=2,n_redundant=0, n_repeated=0, n_classes=3, n_clusters_per_class=1,class_sep=2,\n",
-        "                          flip_y=0,weights=[0.33,0.33,0.33], random_state=randint(0,20))\n",
-        "#f, (ax1,ax2) = plt.subplots(nrows=1, ncols=2,figsize=(20,8))\n",
-        "#sns.scatterplot(Xb[:,0],Xb[:,1],hue=y,ax=ax1);\n",
-        "#ax1.set_title(\"No Imbalance\");"
+        "X,y = make_classification(n_samples=50, n_features=2, \n",
+        "                          n_redundant=0, n_repeated=0, n_classes=3, \n",
+        "                          n_clusters_per_class=1,class_sep=2,\n",
+        "                          flip_y=0,weights=[0.33,0.33,0.33], \n",
+        "                          random_state=randint(0,20))"
       ],
-      "execution_count": null,
+      "execution_count": 85,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LOu3impvXdFk"
+        "id": "LOu3impvXdFk",
+        "outputId": "0b58e231-d198-486b-f2f3-dbb7fc193e72",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "X.shape"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(50, 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 86
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -108,7 +125,7 @@
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    X, y, test_size=0.33, random_state=42)"
       ],
-      "execution_count": null,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -133,7 +150,7 @@
         "U_trained=clf_U.fit(X_train, y_train)\n",
         "y_U_pred = clf_U.predict(X_test)\n"
       ],
-      "execution_count": null,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -146,13 +163,17 @@
         "D_trained =clf_D.fit(X_train, y_train)\n",
         "y_D_pred = clf_D.predict(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 89,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lh3TTPR3fLS9"
+        "id": "lh3TTPR3fLS9",
+        "outputId": "385153b5-d1c7-4033-9eaa-f4445cc8d439",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print(confusion_matrix(y_test, y_U_pred))\n",
@@ -161,60 +182,53 @@
         "print(confusion_matrix(y_test, y_D_pred))\n",
         "print(classification_report(y_test, y_D_pred))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 2  0  0]\n",
+            " [ 0 11  0]\n",
+            " [ 0  0  4]]\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00         2\n",
+            "           1       1.00      1.00      1.00        11\n",
+            "           2       1.00      1.00      1.00         4\n",
+            "\n",
+            "    accuracy                           1.00        17\n",
+            "   macro avg       1.00      1.00      1.00        17\n",
+            "weighted avg       1.00      1.00      1.00        17\n",
+            "\n",
+            "[[ 2  0  0]\n",
+            " [ 0 11  0]\n",
+            " [ 0  0  4]]\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00         2\n",
+            "           1       1.00      1.00      1.00        11\n",
+            "           2       1.00      1.00      1.00         4\n",
+            "\n",
+            "    accuracy                           1.00        17\n",
+            "   macro avg       1.00      1.00      1.00        17\n",
+            "weighted avg       1.00      1.00      1.00        17\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5XoOki2KjeG6"
+        "id": "hfViIizA4Xm8"
       },
       "source": [
-        "**Calculate the error for different numbers of neighbors**"
+        "**Assignment** <br>\n",
+        "1. Change the number of neighbors and see the effect, if any,  on the confusion matrices. \n",
+        "2. Try different dataset sizes. How does the algorithm perform?\n",
+        "3. Change the number of features. Start with 2 then progress up to 40. How does the alogrithm perform?\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DxYrfF43i7bQ"
-      },
-      "source": [
-        "error = []\n",
-        "\n",
-        "# Calculating error for K values between 1 and 40\n",
-        "for i in range(1, 40):\n",
-        "    knn = KNeighborsClassifier(n_neighbors=i)\n",
-        "    knn.fit(X_train, y_train)\n",
-        "    pred_i = knn.predict(X_test)\n",
-        "    error.append(np.mean(pred_i != y_test))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "6zZf_0DIjpHe"
-      },
-      "source": [
-        "**Plot the error for each K**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RrywYY10i2vK"
-      },
-      "source": [
-        "plt.figure(figsize=(12, 6))\n",
-        "plt.plot(range(1, 40), error, color='red', linestyle='dashed', marker='o',\n",
-        "         markerfacecolor='blue', markersize=10)\n",
-        "plt.title('Error Rate K Value')\n",
-        "plt.xlabel('K Value')\n",
-        "plt.ylabel('Mean Error')\n"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
