--- a/KNN3.ipynb
+++ b/KNN3.ipynb
@@ -24,6 +24,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "amigxplJ56mQ"
+      },
+      "source": [
+        "Using the KNeighbors algorithm from SKLearn, experiment with different dataset sizes, number of features, and number of neighbors. <br>\n",
+        "The notebook will produce the confusiion matrix for both the uniform and the distance versions of the algorithm. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "csEWAu8X_l2t"
@@ -39,7 +49,7 @@
         "from random import randint\n",
         "from sklearn.neighbors import KNeighborsClassifier"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,7 +69,7 @@
       "source": [
         "n_neighbors = 5 #change "
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,36 +95,19 @@
         "                          flip_y=0,weights=[0.33,0.33,0.33], \n",
         "                          random_state=randint(0,20))"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LOu3impvXdFk",
-        "outputId": "0b58e231-d198-486b-f2f3-dbb7fc193e72",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "LOu3impvXdFk"
       },
       "source": [
         "X.shape"
       ],
-      "execution_count": 86,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(50, 2)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 86
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -125,7 +118,7 @@
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    X, y, test_size=0.33, random_state=42)"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +143,7 @@
         "U_trained=clf_U.fit(X_train, y_train)\n",
         "y_U_pred = clf_U.predict(X_test)\n"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,17 +156,13 @@
         "D_trained =clf_D.fit(X_train, y_train)\n",
         "y_D_pred = clf_D.predict(X_test)"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lh3TTPR3fLS9",
-        "outputId": "385153b5-d1c7-4033-9eaa-f4445cc8d439",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "lh3TTPR3fLS9"
       },
       "source": [
         "print(confusion_matrix(y_test, y_U_pred))\n",
@@ -182,41 +171,8 @@
         "print(confusion_matrix(y_test, y_D_pred))\n",
         "print(classification_report(y_test, y_D_pred))"
       ],
-      "execution_count": 90,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[ 2  0  0]\n",
-            " [ 0 11  0]\n",
-            " [ 0  0  4]]\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       1.00      1.00      1.00         2\n",
-            "           1       1.00      1.00      1.00        11\n",
-            "           2       1.00      1.00      1.00         4\n",
-            "\n",
-            "    accuracy                           1.00        17\n",
-            "   macro avg       1.00      1.00      1.00        17\n",
-            "weighted avg       1.00      1.00      1.00        17\n",
-            "\n",
-            "[[ 2  0  0]\n",
-            " [ 0 11  0]\n",
-            " [ 0  0  4]]\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       1.00      1.00      1.00         2\n",
-            "           1       1.00      1.00      1.00        11\n",
-            "           2       1.00      1.00      1.00         4\n",
-            "\n",
-            "    accuracy                           1.00        17\n",
-            "   macro avg       1.00      1.00      1.00        17\n",
-            "weighted avg       1.00      1.00      1.00        17\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
