--- a/KNN3.ipynb
+++ b/KNN3.ipynb
@@ -160,6 +160,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T2tyW_oyBaST"
+      },
+      "source": [
+        "**Create a confusion matrix and classification report for each of the weights**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "lh3TTPR3fLS9"
