--- a/KNN2.ipynb
+++ b/KNN2.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN0f7f38JQtmAZhrJycfQNb",
+      "authorship_tag": "ABX9TyOuT6ktOn4/4p/SGNEQ7cUR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/KNN2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fabGmornCroL"
+      },
+      "source": [
+        "This notebook uses the Iris dataset to explore the KNeighbors classification algorithm."
       ]
     },
     {
@@ -49,7 +58,7 @@
         "id": "um1-Bxljhc-V"
       },
       "source": [
-        "Get the data"
+        "**Get the data**"
       ]
     },
     {
@@ -82,7 +91,7 @@
         "id": "yEfNix1IhfQV"
       },
       "source": [
-        "Split the labels from the features"
+        "**Split the labels from the features**"
       ]
     },
     {
@@ -96,6 +105,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vQldcTi8DQIA"
+      },
+      "source": [
+        "**Plot two of the features**"
+      ]
     },
     {
       "cell_type": "code",
@@ -112,6 +130,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zYxkNk21DZHh"
+      },
+      "source": [
+        "**Plot a feature against its classification**"
+      ]
     },
     {
       "cell_type": "code",
@@ -134,7 +161,7 @@
         "id": "2g2KzJIhbwsY"
       },
       "source": [
-        "X"
+        "#X"
       ],
       "execution_count": null,
       "outputs": []
@@ -145,7 +172,7 @@
         "id": "2IX5kLILby6b"
       },
       "source": [
-        "y"
+        "#y"
       ],
       "execution_count": null,
       "outputs": []
@@ -156,7 +183,7 @@
         "id": "WBSdde7Khkwf"
       },
       "source": [
-        "Split the data into train and test sets"
+        "**Split the data into train and test sets**"
       ]
     },
     {
@@ -169,6 +196,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "biremn7TDhvB"
+      },
+      "source": [
+        "**Plot two features from the training set**"
+      ]
     },
     {
       "cell_type": "code",
@@ -187,6 +223,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fJ5rtGqMDqqE"
+      },
+      "source": [
+        "**Plot a training set feature against classes**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "nYTIo_oCXzee"
@@ -202,43 +247,12 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Ag30elGkgCkU"
-      },
-      "source": [
-        "plt.figure(figsize=(10,3))\n",
-        "fig = plt.scatter(X_test[:,[0]],X_test[:,[2]], marker='o', c=X_test[:,[0]],s=25)\n",
-        "plt.xlabel(\"sepal-length\")\n",
-        "plt.ylabel(\"petal-length\")\n",
-        "plt.colorbar(fig)\n",
-        "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xnBWYXAYfrPG"
-      },
-      "source": [
-        "plt.figure(figsize=(10,3))\n",
-        "fig = plt.scatter(X_test[:,[0]],y_test, marker='o', c=X_test[:,[1]],s=25)\n",
-        "plt.xlabel('X_test')\n",
-        "plt.colorbar(fig)\n",
-        "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "8f4HQQcMYs1g"
       },
       "source": [
-        "Standarize the dataset<br>\n",
+        "**Standarize the dataset**<br>\n",
         "Standardization of a dataset is a common requirement for many machine learning estimators: they might behave badly if the individual features do not more or less look like standard normally distributed data"
       ]
     },
@@ -391,7 +405,7 @@
       },
       "source": [
         "**Assignment**<br>\n",
-        "1. Change the number of neighbors used from 8 to a smaller number and then by a larger number<br>\n",
+        "1. Change the number of neighbors used from 8 to a smaller number and then to a larger number<br>\n",
         "2. Then change the weights from uniform to distance"
       ]
     }
