--- a/KNN1.ipynb
+++ b/KNN1.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN/mqtpcaQHG5sgft3bFyM6",
+      "authorship_tag": "ABX9TyNYIfleT/60io8BWuWiNMiz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -294,8 +294,8 @@
       },
       "source": [
         "# **Assignment**<br>\n",
-        "Add more data to the dataset. <br>\n",
-        "Run the model. <br>\n",
+        "Experiment by adding more data to the dataset. <br>\n",
+        "Then try changing the number of neighbors<br>\n",
         "Share with the class what you have learned. <br>"
       ]
     }
