--- a/KNN4.ipynb
+++ b/KNN4.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN4.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNuicMDt9akQQa27iETFrg4",
+      "authorship_tag": "ABX9TyP3+h7vVXMO6dBqj7YhqdmS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -281,6 +281,7 @@
         "The code below creates a synthetic dataset. <br>\n",
         "1. Modify the size of the dataset<br>\n",
         "2. Modify the ratio of train and test sets<br>\n",
+        "3. Change from uniform to distance \n",
         "\n",
         "Record what happens to the confusion matrix and the K plot. <br>"
       ]
@@ -298,7 +299,7 @@
         "# Generate Balanced Data\n",
         "X,y = make_classification(n_samples=100, n_features=2, \n",
         "                          n_redundant=0, n_repeated=0, n_classes=3, \n",
-        "                          n_clusters_per_class=1,class_sep=2,\n",
+        "                          n_clusters_per_class=1,class_sep=1,\n",
         "                          flip_y=0,weights=[0.33,0.33,0.33], \n",
         "                          random_state=randint(0,20))"
       ],
@@ -336,7 +337,7 @@
       "source": [
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn import neighbors, datasets\n",
-        "clf_U = neighbors.KNeighborsClassifier(n_neighbors, weights='uniform')\n",
+        "clf_U = neighbors.KNeighborsClassifier(n_neighbors, weights='distance')\n",
         "U_trained=clf_U.fit(X_train, y_train)\n",
         "y_U_pred = clf_U.predict(X_test)"
       ],
@@ -365,7 +366,7 @@
         "\n",
         "# Calculating error for K values between 1 and 40\n",
         "for i in range(1, 40):\n",
-        "    knn = KNeighborsClassifier(n_neighbors=i)\n",
+        "    knn = KNeighborsClassifier(n_neighbors=i,weights='distance')\n",
         "    knn.fit(X_train, y_train)\n",
         "    pred_i = knn.predict(X_test)\n",
         "    error.append(np.mean(pred_i != y_test))"
