--- a/KNN3.ipynb
+++ b/KNN3.ipynb
@@ -30,7 +30,7 @@
       },
       "source": [
         "Using the KNeighbors algorithm from SKLearn, experiment with different dataset sizes, number of features, and number of neighbors. <br>\n",
-        "The notebook will produce the confusiion matrix for both the uniform and the distance versions of the algorithm. "
+        "The notebook will produce the confusion matrix for both the uniform and the distance versions of the algorithm. "
       ]
     },
     {
@@ -192,7 +192,8 @@
         "**Assignment** <br>\n",
         "1. Change the number of neighbors and see the effect, if any,  on the confusion matrices. \n",
         "2. Try different dataset sizes. How does the algorithm perform?\n",
-        "3. Change the number of features. Start with 2 then progress up to 40. How does the alogrithm perform?\n"
+        "3. Change the number of features. Start with 2 then progress up to 40. How does the alogrithm perform?\n",
+        "4. Change class_sep=1 in the dataset. How does the algorithm perform when the classes are closer together?\n"
       ]
     }
   ]
